<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#20443C"
    android:orientation="vertical"
    tools:context=".FoodReviewsActivity">


    <LinearLayout
        android:id="@+id/dining_hall_header"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_marginBottom="4dp"
        android:layout_weight="1"
        android:background="#000000"
        android:orientation="horizontal">

        <ImageButton
            android:id="@+id/back_arrow_button"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_weight="0"
            android:backgroundTint="#00000000"
            android:contentDescription="@string/back_button_description"
            app:srcCompat="@drawable/back_arrow" />

        <TextView
            android:id="@+id/FoodItem"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:gravity="center"
            android:text="@string/food_name_default"
            android:textColor="#FFFFFF"
            android:textSize="40sp" />

    </LinearLayout>


    <TextView
        android:id="@+id/textView2"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center_vertical"
        android:layout_marginLeft="20dp"
        android:layout_marginRight="20dp"
        android:gravity="center_horizontal"
        android:text="@string/leaveReview"
        android:textColor="#FFFFFF"
        android:textSize="18sp" />

    <EditText
        android:id="@+id/leaveReviewEditText"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_marginLeft="20dp"
        android:layout_marginRight="20dp"
        android:layout_weight="1"
        android:background="#E1E1E1"
        android:backgroundTint="#E1E1E1"
        android:ems="10"
        android:hint="@string/leaveReviewPlaceholder"
        android:inputType="text"
        android:textColor="#000000" />

    <Button
        android:id="@+id/leave_review_button"
        android:layout_width="match_parent"
        android:layout_height="70dp"
        android:layout_marginLeft="100dp"
        android:layout_marginRight="100dp"
        android:backgroundTint="#707070"
        android:insetLeft="8dp"
        android:insetTop="4dp"
        android:insetRight="8dp"
        android:insetBottom="4dp"
        android:padding="0dp"
        android:text="@string/leave_review_text"
        android:textSize="18sp"
        app:cornerRadius="16dp"
        app:iconPadding="0dp" />

    <TextView
        android:id="@+id/othersSaidText"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="20dp"
        android:layout_marginTop="50dp"
        android:layout_marginRight="20dp"
        android:gravity="center_horizontal"
        android:text="@string/othersText"
        android:textColor="#FFFFFF"
        android:textSize="16sp" />

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="6">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <TextView
                android:id="@+id/no_reviews_Text"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginLeft="20dp"
                android:layout_marginTop="20dp"
                android:layout_marginRight="20dp"
                android:gravity="center_horizontal"
                android:text="@string/top_review_defualt"
                android:textColor="#FFFFFF"
                android:textSize="24sp" />

        </LinearLayout>

    </ScrollView>




</LinearLayout>
