<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#20443C"
    android:orientation="vertical"
    tools:context=".DiningHallActivity">

<!--    Large amount of the XML in this page is created utilizing ChatGPT-->

<!--    The "nav bar at the top of the page-->
    <LinearLayout
        android:id="@+id/dining_hall_header"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_marginBottom="4dp"
        android:layout_weight="1"
        android:background="#000000"
        android:orientation="horizontal">

        <ImageButton
            android:id="@+id/back_arrow_button"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_weight="0"
            android:backgroundTint="#00000000"
            android:contentDescription="@string/back_button_description"
            app:srcCompat="@drawable/back_arrow" />

        <TextView
            android:id="@+id/DinningHall"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:gravity="center"
            android:text="@string/dining_hall"
            android:textColor="#FFFFFF"
            android:textSize="40sp" />

        <ImageButton
            android:id="@+id/gps_button"
            android:layout_width="50dp"
            android:layout_height="match_parent"
            android:layout_weight="0"
            android:backgroundTint="#00000000"
            android:contentDescription="@string/gps_button_description"
            android:onClick="onGpsButton"
            app:srcCompat="@drawable/pin_icon" />

        <ImageButton
            android:id="@+id/calendar_button"
            android:layout_width="50dp"
            android:layout_height="match_parent"
            android:layout_weight="0"
            android:backgroundTint="#00000000"
            android:contentDescription="@string/calendar_button_description"
            app:srcCompat="@drawable/calendar_icon" />

    </LinearLayout>

<!--    These are the buttons that toggle what meals are displayed-->
<!--    There is no fucntionality in this XML based on the id the Java displays the correct meals-->
    <LinearLayout
        android:id="@+id/meal_selector"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight=".75"
        android:background="#000000"
        android:orientation="horizontal">
<!--Display breakfast items-->
        <Button
            android:id="@+id/breakfast_button"
            style="?android:attr/buttonBarButtonStyle"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:background="@android:color/transparent"
            android:text="@string/breakfast_button"
            android:textColor="#606060"
            android:textSize="20sp" />
        <!--Display lunch items-->
        <Button
            android:id="@+id/lunch_button"
            style="?android:attr/buttonBarButtonStyle"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:background="@android:color/transparent"
            android:text="@string/lunch_button"
            android:textColor="#606060"
            android:textSize="20sp" />
        <!--Display dinner items-->
        <Button
            android:id="@+id/dinner_button"
            style="?android:attr/buttonBarButtonStyle"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:background="@android:color/transparent"
            android:text="@string/dinner_button"
            android:textColor="#FFFFFF"
            android:textSize="20sp" />
    </LinearLayout>

<!--This is the view for all of the dishes and reviews-->
<!--    Lets the user scroll all of the reviews-->
    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="5"
        android:fillViewport="true">
    <LinearLayout
        android:id="@+id/reviewed_food_items"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="5"
        android:orientation="vertical">



        <!-- Dynamically created buttons for food items will be added here -->

    </LinearLayout>
    </ScrollView>




</LinearLayout>