<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context=".RegisterActivity"
    android:background="#fdf9f9">
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:paddingLeft="30dp"
            android:paddingTop="50dp">

            <ImageView
                android:id="@+id/logo"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:src="@drawable/logo"
                android:contentDescription="@string/logo_des"/>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginTop="50dp"
                android:text="@string/signup"
                android:textSize="28sp"
                android:textStyle="bold" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginTop="10dp"
                android:text="@string/welcome"
                android:textColor="@color/text_color_green"
                android:textSize="25sp" />

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical">

            <EditText
                android:id="@+id/et_fname"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/firstname_reg"
                android:layout_gravity="center"
                android:layout_marginTop="60dp"
                android:layout_marginStart="40dp"
                android:layout_marginEnd="40dp"
                android:background="@drawable/search_view_background"
                android:drawableStart="@drawable/arrow_icon"
                android:drawablePadding="20dp"
                android:padding="10dp"
                android:textColor="#7f7f7f"
                android:textColorHint="#7f7f7f"
                android:textSize="23sp"
                />
            <EditText
                android:id="@+id/et_lname"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/lastname_reg"
                android:layout_gravity="center"
                android:layout_marginTop="15dp"
                android:layout_marginStart="40dp"
                android:layout_marginEnd="40dp"
                android:background="@drawable/search_view_background"
                android:drawableStart="@drawable/arrow_icon"
                android:drawablePadding="20dp"
                android:padding="10dp"
                android:textColor="#7f7f7f"
                android:textColorHint="#7f7f7f"
                android:textSize="23sp"
                />

            <EditText
                android:inputType="textEmailAddress"
                android:id="@+id/et_email"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/email_reg"
                android:layout_gravity="center"
                android:layout_marginTop="15dp"
                android:layout_marginStart="40dp"
                android:layout_marginEnd="40dp"
                android:background="@drawable/search_view_background"
                android:drawableStart="@drawable/email_icon"
                android:drawablePadding="20dp"
                android:padding="10dp"
                android:textColor="#7f7f7f"
                android:textColorHint="#7f7f7f"
                android:textSize="23sp"
                />
            <EditText
                android:inputType="textPassword"
                android:id="@+id/et_pwd"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/pwd_reg"
                android:layout_gravity="center"
                android:layout_marginTop="15dp"
                android:layout_marginStart="40dp"
                android:layout_marginEnd="40dp"
                android:background="@drawable/search_view_background"
                android:drawableStart="@drawable/password_icon"
                android:drawablePadding="20dp"
                android:padding="10dp"
                android:textColor="#7f7f7f"
                android:textColorHint="#7f7f7f"
                android:textSize="23sp"
                />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:gravity="center"
                android:layout_marginTop="10dp">
                <CheckBox
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"/>
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/register_agreement"
                    android:textColor="#000000"
                    android:textSize="15sp"
                    />

            </LinearLayout>

            <ImageButton
                android:id="@+id/btn_register"
                android:layout_width="180dp"
                android:layout_height="48dp"
                android:layout_gravity="center"
                android:contentDescription="@string/signupbtn_des"
                android:background="@drawable/register_button"
                android:layout_marginTop="25dp"
                />
        </LinearLayout>
    </LinearLayout>
</RelativeLayout>