<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="70dp"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/food_name"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="2"
                android:gravity="center_vertical"
                android:paddingLeft="10dp"
                android:text="@string/food_name_default"
                android:textColor="#FFFFFF"
                android:textSize="32sp" />

            <LinearLayout
                android:id="@+id/review_layout"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="0"
                android:gravity="center_horizontal"
                android:orientation="vertical">

                <LinearLayout
                    android:id="@+id/review_stars"
                    android:layout_width="match_parent"
                    android:layout_height="50dp"
                    android:orientation="horizontal">

                    <ImageView
                        android:id="@+id/review_star_1"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        app:srcCompat="@drawable/no_star" />

                    <ImageView
                        android:id="@+id/review_star_2"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        app:srcCompat="@drawable/no_star" />

                    <ImageView
                        android:id="@+id/review_star_3"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        app:srcCompat="@drawable/no_star" />

                    <ImageView
                        android:id="@+id/review_star_4"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        app:srcCompat="@drawable/no_star" />

                    <ImageView
                        android:id="@+id/review_star_5"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        app:srcCompat="@drawable/no_star" />

                </LinearLayout>

                <TextView
                    android:id="@+id/num_reviews_text"
                    android:layout_width="wrap_content"
                    android:layout_height="20dp"
                    android:text="@string/num_reviews"
                    android:textColor="#FFFFFF" />

            </LinearLayout>

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:paddingBottom="4dp">

            <TextView
                android:id="@+id/top_review"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_gravity="start"
                android:layout_weight="2.3"
                android:paddingLeft="10dp"
                android:text="@string/top_review_defualt"
                android:textColor="#FFFFFF"
                android:textSize="20sp" />

            <Button
                android:id="@+id/leave_review_button"
                android:layout_width="0dp"
                android:layout_height="70dp"
                android:layout_weight="1"
                android:backgroundTint="#707070"
                android:insetLeft="8dp"
                android:insetTop="4dp"
                android:insetRight="8dp"
                android:insetBottom="4dp"
                android:padding="0dp"
                android:text="@string/leave_review_text"
                android:textSize="18sp"
                app:cornerRadius="16dp"
                app:iconPadding="0dp" />
        </LinearLayout>

    </LinearLayout>

</FrameLayout>