<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <msu.edu.cse476.dhillo17.palatepal.FoodReview
        style="@style/Widget.Theme.Palatepal.MyView"
        android:layout_width="match_parent"
        android:layout_height="120dp"
        android:paddingLeft="20dp"
        android:paddingBottom="40dp" />

    <LinearLayout
        android:id="@+id/mainLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="#20443C"
        android:orientation="vertical"
        android:padding="8dp">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/usernameText"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_gravity="center_vertical"
                android:layout_weight="2"
                android:text="@string/reviewUser"
                android:textColor="#FFFFFF"
                android:textSize="24sp" />

            <LinearLayout
                android:id="@+id/review_layout"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_gravity="center_vertical"
                android:layout_weight="1"
                android:gravity="center_horizontal"
                android:orientation="vertical">

                <LinearLayout
                    android:id="@+id/review_stars"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal">

                    <ImageView
                        android:id="@+id/review_star_1"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:adjustViewBounds="true"
                        app:srcCompat="@drawable/no_star" />

                    <ImageView
                        android:id="@+id/review_star_2"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:adjustViewBounds="true"
                        app:srcCompat="@drawable/no_star" />

                    <ImageView
                        android:id="@+id/review_star_3"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:adjustViewBounds="true"
                        app:srcCompat="@drawable/no_star" />

                    <ImageView
                        android:id="@+id/review_star_4"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:adjustViewBounds="true"
                        app:srcCompat="@drawable/no_star" />

                    <ImageView
                        android:id="@+id/review_star_5"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:adjustViewBounds="true"
                        app:srcCompat="@drawable/no_star" />

                </LinearLayout>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:gravity="center"
                    android:orientation="horizontal">

                    <TextView
                        android:id="@+id/num_reviews_text"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_weight="2"
                        android:text="@string/noLikes"
                        android:textColor="#FFFFFF"
                        android:textSize="13sp" />

                    <ImageButton
                        android:id="@+id/likeButton"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:backgroundTint="#00FFFFFF"
                        android:src="@drawable/no_like" />
                </LinearLayout>

            </LinearLayout>

        </LinearLayout>

        <TextView
            android:id="@+id/reviewTextView"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/reviewText"
            android:textColor="#FFFFFF"
            android:textSize="16sp" />

    </LinearLayout>

</FrameLayout>